# astropy

./: .rtd-environment.yml  .travis.yml  CHANGES.rst  README.rst  azure-pipelines.yml  azure-template.yml  conftest.py  pyproject.toml  setup.cfg  setup.py  test.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci_cron.yml  ci_cron_daily.yml  ci_cron_weekly.yml  ci_workflows.yml  exotic.yml  publish.yml  update_astropy_iers_data_pin.yml  update_credits.py  update_credits.yml  update_iers.py  update_iers.yml
.pyinstaller/: run_astropy_tests.py
astropy/: __init__.py  conftest.py
astropy/_constants/: definition.py
astropy/_erfa/: core.py.templ  setup_package.py
astropy/config/: configuration.py
astropy/constants/: constant.py
astropy/convolution/: convolve.py  kernels.py  setup_package.py
astropy/coordinates/: builtin_frames.py  spectral_quantity.py  stokes_coord.py
astropy/cosmology/: core.py
astropy/modeling/: _fitting_parallel.py  core.py  fitting.py  fitting_parallel.py  functional_models.py  parameters.py  setup_package.py  utils.py
astropy/nddata/: nddata.py
astropy/stats/: sigma_clipping.py
astropy/table/: _column_mixins.pyx  setup_package.py  table.py
astropy/tests/: helper.py  pytest_plugins.py  runner.py
astropy/time/: core.py
astropy/timeseries/: binned.py  sampled.py
astropy/units/: core.py  quantity.py  si.py
astropy/utils/: data.py  misc.py
astropy/wcs/: low_level_api.py  setup_package.py  wcs.py
docs/: Makefile  conf.py  credits.rst  install.rst  nitpick-exceptions
docs/configs/: index.rst
meta/: pyproject.toml
(+142 files in other folders)
