[build-system]
requires = ["setuptools",
            "setuptools_scm",
            "wheel",
            "cython",
            "jinja2",
            "numpy==1.13.1; python_version<'3.7'",
            "numpy==1.14.5; python_version>='3.7'",
            "extension-helpers @ git+https://github.com/astrofrog/extension-helpers#egg=extension-helpers"]
